# ragpipe

./: .gitignore  LICENSE  README.md  pyproject.toml  release_notes.md
.github/workflows/: publish.yml
completions/: ragpipe.bash  ragpipe.fish  ragpipe.zsh
demo/: index.html
docs/: agent_integration.md  demo.html  index.html  robots.txt  sitemap.xml
scripts/: capture_gif.py
src/ragpipe/: __init__.py  cli.py  config.py  highlevel.py  pipeline.py
src/ragpipe/integrations/: __init__.py  git_hooks.py  indexer.py  linux.py  macos.py  server.py  vscode.py  watcher.py
src/ragpipe/sinks/: __init__.py  json_sink.py  pinecone_sink.py  qdrant_sink.py  sinks.py
src/ragpipe/sources/: __init__.py  file_source.py  git_source.py  web_source.py
src/ragpipe/transforms/: __init__.py  auto_embed.py  chunking.py  cleaning.py  embedding.py  transforms.py
tests/: test_chunking.py  test_cleaning.py  test_file_source.py  test_pipeline.py  test_sinks.py
