[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragpipe"
version = "0.1.0"
description = "RAG in 3 functions. Ingest any data source into vector databases."
readme = "README.md"
license = "BUSL-1.1"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.10"
authors = [
    { name = "avasis-ai", email = "avasis@proton.me" },
]
keywords = ["rag", "pipeline", "vector-database", "embeddings", "llm", "cli", "ingestion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = ["typer>=0.12.0", "rich>=13.0.0"]
web = ["beautifulsoup4>=4.12"]
qdrant = ["qdrant-client>=1.7"]
pinecone = ["pinecone-client>=3.0"]
openai = ["openai>=1.0"]
local = ["sentence-transformers>=2.2"]
all = [
    "ragpipe[cli]",
    "ragpipe[web]",
    "ragpipe[qdrant]",
    "ragpipe[pinecone]",
    "ragpipe[openai]",
    "ragpipe[local]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "ragpipe[cli,web]",
]

[project.scripts]
ragpipe = "ragpipe.cli:app"

[project.urls]
Homepage = "https://github.com/avasis-ai/ragpipe"
Repository = "https://github.com/avasis-ai/ragpipe"
Issues = "https://github.com/avasis-ai/ragpipe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ragpipe"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
